--- a/payment-administration/src/main/webapp/partials/dashboard.html
+++ b/payment-administration/src/main/webapp/partials/dashboard.html
@@ -13,7 +13,7 @@
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-xs-3">
-                                <i class="fa  fa-th-list fa-5x"></i>
+                                <i class="fa  fa-th-list fa-3x"></i>
                             </div>
                             <div class="col-xs-9 text-right">
                                 <div class="huge">{{totalOrderCount}}</div>
@@ -35,7 +35,7 @@
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-xs-3">
-                                <i class="fa  fa-th-list fa-5x"></i>
+                                <i class="fa  fa-th-list fa-3x"></i>
                             </div>
                             <div class="col-xs-9 text-right">
                                 <div class="huge">{{totalRecurringOrderCount}}</div>
@@ -57,15 +57,15 @@
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-xs-3">
-                                <i class="fa  fa-th-list fa-5x"></i>
+                                <i class="fa  fa-th-list fa-3x"></i>
                             </div>
                             <div class="col-xs-9 text-right">
-                                <div class="huge">124</div>
-                                <div>New Orders!</div>
+                                <div class="huge">{{totalRefunds}}</div>
+                                <div>Refunds!</div>
                             </div>
                         </div>
                     </div>
-                    <a href="#">
+                    <a href="#" ng-click="searchRefunds()">
                         <div class="panel-footer">
                             <span class="pull-left">View Details</span> <span
                                 class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -79,11 +79,11 @@
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-xs-3">
-                                <i class="fa fa-support fa-5x"></i>
+                                <i class="fa fa-th-list fa-3x"></i>
                             </div>
                             <div class="col-xs-9 text-right">
                                 <div class="huge">13</div>
-                                <div>Orders !</div>
+                                <div>Recurring Stopped !</div>
                             </div>
                         </div>
                     </div>
