--- a/payment-administration/src/main/webapp/partials/dashboard.html
+++ b/payment-administration/src/main/webapp/partials/dashboard.html
@@ -82,12 +82,12 @@
                                 <i class="fa fa-th-list fa-3x"></i>
                             </div>
                             <div class="col-xs-9 text-right">
-                                <div class="huge">13</div>
+                                <div class="huge">{{totalStoppedRecurring}}</div>
                                 <div>Recurring Stopped !</div>
                             </div>
                         </div>
                     </div>
-                    <a href="#">
+                    <a href="#" ng-click="searchStoppedRecurring()">
                         <div class="panel-footer">
                             <span class="pull-left">View Details</span> <span
                                 class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
