--- a/payment-administration/src/main/webapp/partials/refund-transaction.html
+++ b/payment-administration/src/main/webapp/partials/refund-transaction.html
@@ -1,31 +1,28 @@
-        <!-- Page Content -->
-        <div id="page-wrapper">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="page-header">Refund Transaction</h1>
-                </div>
-                <!-- /.col-lg-12 -->
-                <form role="form">
-                    <div class="form-group input-group">
-                        <label class="control-label"    >Order Number</label>
-                        <input type="text" class="form-control" ng-model="orderNo" width="100px">
-                        <span class="input-group-btn" width="100px">
-                <button class="btn btn-default" type="button" ng-click="refundTransaction()"><i class="fa fa-search"></i>
-                </button>
-             </span>
-                    </div>
-                </form>
-            </div>
-            <!-- /.row -->
-
-            {{orderDetails.response_message | uppercase}}
-
-            {{errorMsg}}
-
-
-
+<!-- Page Content -->
+<div id="page-wrapper">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Refund Transaction</h1>
         </div>
-        <!-- /#page-wrapper -->
+        <div class="col-lg-6">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Order Number">
+                <span class="input-group-btn">
+        <button class="btn btn-default" type="button" ng-click="refundTransaction()">Submit</button>
+      </span>
+            </div><!-- /input-group -->
+        </div><!-- /.col-lg-6 -->
+        <!-- /.col-lg-12 -->
+    </div>
+    <!-- /.row -->
 
-        <!-- Custom Theme JavaScript -->
-        <script src="js/sb-admin-2.js"></script>
+    {{orderDetails.response_message | uppercase}}
+
+    {{errorMsg}}
+
+
+</div>
+<!-- /#page-wrapper -->
+
+<!-- Custom Theme JavaScript -->
+<script src="js/sb-admin-2.js"></script>
