--- a/payment-administration/src/main/webapp/partials/stop-recurring.html
+++ b/payment-administration/src/main/webapp/partials/stop-recurring.html
@@ -7,18 +7,24 @@
 
         <div class="col-lg-6">
             <div class="input-group">
-                <input type="text" class="form-control" placeholder="Order Number">
+                <input type="text" class="form-control" placeholder="Order Number" ng-model="orderNo">
                 <span class="input-group-btn">
         <button class="btn btn-default" type="button" ng-click="stopRecurring()">Submit</button>
       </span>
             </div><!-- /input-group -->
         </div><!-- /.col-lg-6 -->
     </div>
+    <br/>
+    <br/>
     <!-- /.row -->
 
     {{orderDetails.response_message | uppercase}}
 
-    {{errorMsg}}
+    <div class="row">
+        <div class="col-lg-12" style="color:red">
+            {{errorMsg}}
+        </div>
+    </div>
 
 
 </div>
