--- a/payment-administration/src/main/webapp/partials/transaction-details.html
+++ b/payment-administration/src/main/webapp/partials/transaction-details.html
@@ -7,7 +7,7 @@
 
                 <div class="col-lg-6">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Order Number">
+                        <input type="text" class="form-control" placeholder="Order Number" ng-model="orderNo">
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="button"
                                     ng-click="searchOrderDetails()">Submit</button>
@@ -15,8 +15,17 @@
                     </div><!-- /input-group -->
                 </div><!-- /.col-lg-6 -->
             </div>
-            <!-- /.row -->
 
+            <br/>
+            <br/>
+            <div class="row">
+                <div class="col-lg-12" style="color:red">
+                    {{errorMsg}}
+                </div>
+            </div>
+
+            <!-- /.row -->
+            <br/>
 
             <div class="row">
                 <div class="col-lg-6">
