Dashboard changes         Purchase and Recurring count         Active Recurring count alone will be displayed summary (Previously we were displaying both active recurring and stopped recurring count together in this summary section)         Active Subscription - 'View Details' : It will get the active recurring transactions only(Previously we were displaying both active recurring and stopped recurring  together in this list)         Latest orders should be displayed first in the list         Labels changed in the dashboard
       4. Removed the payload in Transaction Details Tab

--- a/payment-administration/src/main/webapp/partials/dashboard.html
+++ b/payment-administration/src/main/webapp/partials/dashboard.html
@@ -17,7 +17,7 @@
                             </div>
                             <div class="col-xs-9 text-right">
                                 <div class="huge">{{totalOrderCount}}</div>
-                                <div>Today's Transaction Count</div>
+                                <div>Purchase and Subscription Count</div>
                             </div>
                         </div>
                     </div>
@@ -39,7 +39,7 @@
                             </div>
                             <div class="col-xs-9 text-right">
                                 <div class="huge">{{totalRecurringOrderCount}}</div>
-                                <div>Subsriptions!</div>
+                                <div>Active Subsriptions!</div>
                             </div>
                         </div>
                     </div>
