--- a/payment-administration/src/main/webapp/partials/transaction-details.html
+++ b/payment-administration/src/main/webapp/partials/transaction-details.html
@@ -117,7 +117,7 @@
 
                     </form>
 
-                    {{orderDetails}}
+                    <!-- {{orderDetails}}-->
                 </div>
         </div>
         <!-- /#page-wrapper -->
